--- a/app/src/main/res/layout/activity_main_app.xml
+++ b/app/src/main/res/layout/activity_main_app.xml
@@ -22,16 +22,17 @@
 
     <ImageButton
         android:id="@+id/button_emergency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="104dp"
         android:backgroundTint="@color/background_color"
         android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/frame_view_formular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/UserNameText"
-        app:layout_constraintVertical_bias="0.225"
+        app:layout_constraintVertical_bias="0.252"
         app:srcCompat="@drawable/button_default" />
 
     <Switch
@@ -76,5 +77,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/UserNameText"
         app:layout_constraintVertical_bias="0.482" />
+
+    <FrameLayout
+        android:id="@+id/frame_view_formular"
+        android:layout_width="256dp"
+        android:layout_height="254dp"
+        android:background="@drawable/formular_empty_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.564"
+        app:layout_constraintStart_toEndOf="@+id/button_emergency"
+        app:layout_constraintTop_toBottomOf="@+id/progress_info"
+        app:layout_constraintVertical_bias="0.312">
+
+        <LinearLayout
+            android:layout_width="136dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:foregroundGravity="center"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/check_button_male"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="Male"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/check_button_female"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="Female"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/check_button_walk"
+                android:layout_width="match_parent"
+                android:layout_height="40dp
+"
+                android:text="Able to walk"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/check_button_speak"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="Able to speak"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
