--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="actionbar_background">#02aef2</color>
     <color name="actionbar_text">#ffffff</color>
-    <color name="background_color">#c8f3fa</color>
+    <color name="background_color">#C8F3FA</color>
     <color name="text_color">#000000</color>
 </resources>
